--- a/style.css
+++ b/style.css
@@ -2202,6 +2202,13 @@ font-size: 1rem;
     background-color: var(--pub-bg-color);
     border-radius: 10px;
   }
+
+  .bagshearch h1{
+    color: var(--second2-bg-color);
+  }
+  .bagshearch p{
+    color: var(--second2-bg-color);
+  }
 @media (max-width:617px){
 
 
